added canvas and tools feature

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="pencil-tool-cont">
         <div class="pencil-width-cont">
-            <input type="range" min="2" max="10" value="3">
+            <input class="pencil-width-input" type="range" min="2" max="10" value="3">
         </div>
         <div class="pencil-color-cont">
             <div class="black pencil-color"></div>
@@ -32,10 +32,10 @@
         </div>
     </div>
     <div class="eraser-tool-cont">
-        <input type="range" min="2" max="10" value="3">
+        <input class="eraser-width-input" type="range" min="2" max="10" value="3">
     </div>
     <canvas></canvas>
-    <script src="./canvas.js"></script>
     <script src="./tools.js"></script>
+    <script src="./canvas.js"></script>
 </body>
 </html>
